footer is added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Portfolio</h1>
+    <footer>
+        <div>
+            <p>Made for you withnnn    in Bangalore - 2024</p>
+        </div>
+    </footer>
 </body>
 </html>
