--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <div class="wrapper">
+            <a href="index.html">Shalini</a>
+            <nav>
+                <a href="#">Project</a>
+                <a href="#">About</a>
+                <a href="#">Resume</a>
+            </nav>
+        </div>
+    </header>
     <footer>
-        <div>
-            <p>Made for you withnnn    in Bangalore - 2024</p>
+        <div class="wrapper">
+            <p>Made for you withnnn 💖 & 🍵  in Bangalore - 2024</p>
         </div>
     </footer>
 </body>
