--- a/index.html
+++ b/index.html
@@ -1,26 +1,166 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shalini - Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <div class="wrapper">
-            <a href="index.html">Shalini</a>
-            <nav>
-                <a href="#">Project</a>
-                <a href="#">About</a>
-                <a href="#">Resume</a>
-            </nav>
-        </div>
-    </header>
-    <footer>
-        <div class="wrapper">
-            <p>Made for you withnnn 💖 & 🍵  in Bangalore - 2024</p>
-        </div>
-    </footer>
-</body>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Shalini - Portfolio</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+
+    <body>
+        <header>
+            <div class="wrapper">
+                <a class="logo" href="index.html">SR</a>
+                <nav>
+                    <a href="./index.html" class="active">Projects</a>
+                    <a href="./about.html">About</a>
+                    <a href="./shalini-resume.pdf" target="_blank">Resume</a>
+                </nav>
+            </div>
+        </header>
+        <main>
+            <!-- <div class="filters">
+                <div class="wrapper">
+                    <button class="active">All</button>
+                    <button>HTML</button>
+                    <button>CSS</button>
+                    <button>JS</button>
+                </div>
+            </div> -->
+            <div class="projects">
+                <div class="wrapper">
+                    <div class="project">
+                        <div class="thumbnail form"></div>
+                        <div class="info">
+                            <p>Form</p>
+                            <div class="icons">
+                                <a href=""  target="_blank"
+                                    class="github"><img src="icons/github.svg"></a>
+                                <a href="https://justdecodeme.github.io/portfolio/form/" target="_blank"
+                                    class="github"><img src="icons/arrow-up-right-from-square-solid.svg"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="thumbnail connect"></div>
+                        <div class="info">
+                            <p>Connect</p>
+                            <div class="icons">
+                                <a href="https://github.com/shalinird1999/connect" target="_blank"
+                                    class="github"><img src="icons/github.svg"></a>
+                                <a href="https://justdecodeme.github.io/portfolio/connect/" target="_blank"
+                                    class="github"><img src="icons/arrow-up-right-from-square-solid.svg"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="thumbnail id-card"></div>
+                        <div class="info">
+                            <p>Id Card</p>
+                            <div class="icons">
+                                <a href="https://github.com/shalinird1999/id-card-classroom" target="_blank"
+                                    class="github"><img src="icons/github.svg"></a>
+                                <a href="https://justdecodeme.github.io/portfolio/connect/" target="_blank"
+                                    class="github"><img src="icons/arrow-up-right-from-square-solid.svg"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="thumbnail gallery"></div>
+                        <div class="info">
+                            <p>Gallery</p>
+                            <div class="icons">
+                                <a href="https://github.com/shalinird1999/Gallery" target="_blank"
+                                    class="github"><img src="icons/github.svg"></a>
+                                <a href="https://justdecodeme.github.io/portfolio/connect/" target="_blank"
+                                    class="github"><img src="icons/arrow-up-right-from-square-solid.svg"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="thumbnail school-registration-form"></div>
+                        <div class="info">
+                            <p>School signup form</p>
+                            <div class="icons">
+                                <a href="https://github.com/shalinird1999/school-registration-form" target="_blank"
+                                    class="github"><img src="icons/github.svg"></a>
+                                <a href="https://justdecodeme.github.io/portfolio/connect/" target="_blank"
+                                    class="github"><img src="icons/arrow-up-right-from-square-solid.svg"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="thumbnail landing-page"></div>
+                        <div class="info">
+                            <p>Landing page</p>
+                            <div class="icons">
+                                <a href="https://github.com/shalinird1999/landing-page" target="_blank"
+                                    class="github"><img src="icons/github.svg"></a>
+                                <a href="https://justdecodeme.github.io/portfolio/connect/" target="_blank"
+                                    class="github"><img src="icons/arrow-up-right-from-square-solid.svg"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="thumbnail id-card-office"></div>
+                        <div class="info">
+                            <p>Id card office</p>
+                            <div class="icons">
+                                <a href="https://github.com/shalinird1999/id-card-office" target="_blank"
+                                    class="github"><img src="icons/github.svg"></a>
+                                <a href="https://justdecodeme.github.io/portfolio/connect/" target="_blank"
+                                    class="github"><img src="icons/arrow-up-right-from-square-solid.svg"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="thumbnail todo-list"></div>
+                        <div class="info">
+                            <p>Todo list</p>
+                            <div class="icons">
+                                <a href="https://github.com/shalinird1999/Todo-list" target="_blank"
+                                    class="github"><img src="icons/github.svg"></a>
+                                <a href="https://justdecodeme.github.io/portfolio/connect/" target="_blank"
+                                    class="github"><img src="icons/arrow-up-right-from-square-solid.svg"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="thumbnail website"></div>
+                        <div class="info">
+                            <p>Website</p>
+                            <div class="icons">
+                                <a href="https://github.com/shalinird1999/website" target="_blank"
+                                    class="github"><img src="icons/github.svg"></a>
+                                <a href="https://justdecodeme.github.io/portfolio/connect/" target="_blank"
+                                    class="github"><img src="icons/arrow-up-right-from-square-solid.svg"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="thumbnail personal-blog"></div>
+                        <div class="info">
+                            <p>Personal blog</p>
+                            <div class="icons">
+                                <a href="https://github.com/shalinird1999/personal-blog" target="_blank"
+                                    class="github"><img src="icons/github.svg"></a>
+                                <a href="https://justdecodeme.github.io/portfolio/connect/" target="_blank"
+                                    class="github"><img src="icons/arrow-up-right-from-square-solid.svg"></a>
+                            </div>
+                        </div>
+                    </div>
+                   
+                    
+                </div>
+            </div>
+        </main>
+        <footer>
+            <div class="wrapper">
+                <p>Made with 💖 & 🍵 in Bangalore - 2024</p>
+            </div>
+        </footer>
+    </body>
+
 </html>
