added profile card

--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
                         <div class="info">
                             <p>Form</p>
                             <div class="icons">
-                                <a href=""  target="_blank"
-                                    class="github"><img src="icons/github.svg"></a>
-                                <a href="https://justdecodeme.github.io/portfolio/form/" target="_blank"
+                                <a href="https://github.com/shalinird1999/form"  target="_blank" class="github"><img src="icons/github.svg"></a>
+                                <a href="https://shalinird1999.github.io/form" target="_blank"
                                     class="github"><img src="icons/arrow-up-right-from-square-solid.svg"></a>
                             </div>
                         </div>
@@ -50,7 +49,19 @@
                             <div class="icons">
                                 <a href="https://github.com/shalinird1999/connect" target="_blank"
                                     class="github"><img src="icons/github.svg"></a>
-                                <a href="https://justdecodeme.github.io/portfolio/connect/" target="_blank"
+                                <a href="https://shalinird1999.github.io/connect" target="_blank"
+                                    class="github"><img src="icons/arrow-up-right-from-square-solid.svg"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="thumbnail profile-card"></div>
+                        <div class="info">
+                            <p>Connect</p>
+                            <div class="icons">
+                                <a href="https://github.com/shalinird1999/profile-card" target="_blank"
+                                    class="github"><img src="icons/github.svg"></a>
+                                <a href="https://shalinird1999.github.io/profile-card" target="_blank"
                                     class="github"><img src="icons/arrow-up-right-from-square-solid.svg"></a>
                             </div>
                         </div>
@@ -62,7 +73,7 @@
                             <div class="icons">
                                 <a href="https://github.com/shalinird1999/id-card-classroom" target="_blank"
                                     class="github"><img src="icons/github.svg"></a>
-                                <a href="https://justdecodeme.github.io/portfolio/connect/" target="_blank"
+                                <a href="https://shalinird1999.github.io/id-card-classroom" target="_blank"
                                     class="github"><img src="icons/arrow-up-right-from-square-solid.svg"></a>
                             </div>
                         </div>
@@ -74,7 +85,7 @@
                             <div class="icons">
                                 <a href="https://github.com/shalinird1999/Gallery" target="_blank"
                                     class="github"><img src="icons/github.svg"></a>
-                                <a href="https://justdecodeme.github.io/portfolio/connect/" target="_blank"
+                                <a href="https://shalinird1999.github.io/Gallery" target="_blank"
                                     class="github"><img src="icons/arrow-up-right-from-square-solid.svg"></a>
                             </div>
                         </div>
@@ -86,7 +97,7 @@
                             <div class="icons">
                                 <a href="https://github.com/shalinird1999/school-registration-form" target="_blank"
                                     class="github"><img src="icons/github.svg"></a>
-                                <a href="https://justdecodeme.github.io/portfolio/connect/" target="_blank"
+                                <a href="https://shalinird1999.github.io/school-registration-form" target="_blank"
                                     class="github"><img src="icons/arrow-up-right-from-square-solid.svg"></a>
                             </div>
                         </div>
@@ -98,7 +109,7 @@
                             <div class="icons">
                                 <a href="https://github.com/shalinird1999/landing-page" target="_blank"
                                     class="github"><img src="icons/github.svg"></a>
-                                <a href="https://justdecodeme.github.io/portfolio/connect/" target="_blank"
+                                <a href="https://shalinird1999.github.io/landing-page" target="_blank"
                                     class="github"><img src="icons/arrow-up-right-from-square-solid.svg"></a>
                             </div>
                         </div>
@@ -110,7 +121,7 @@
                             <div class="icons">
                                 <a href="https://github.com/shalinird1999/id-card-office" target="_blank"
                                     class="github"><img src="icons/github.svg"></a>
-                                <a href="https://justdecodeme.github.io/portfolio/connect/" target="_blank"
+                                <a href="https://shalinird1999.github.io/id-card-office" target="_blank"
                                     class="github"><img src="icons/arrow-up-right-from-square-solid.svg"></a>
                             </div>
                         </div>
@@ -122,7 +133,7 @@
                             <div class="icons">
                                 <a href="https://github.com/shalinird1999/Todo-list" target="_blank"
                                     class="github"><img src="icons/github.svg"></a>
-                                <a href="https://justdecodeme.github.io/portfolio/connect/" target="_blank"
+                                <a href="https://shalinird1999.github.io/Todo-list" target="_blank"
                                     class="github"><img src="icons/arrow-up-right-from-square-solid.svg"></a>
                             </div>
                         </div>
@@ -134,7 +145,7 @@
                             <div class="icons">
                                 <a href="https://github.com/shalinird1999/website" target="_blank"
                                     class="github"><img src="icons/github.svg"></a>
-                                <a href="https://justdecodeme.github.io/portfolio/connect/" target="_blank"
+                                <a href="https://shalinird1999.github.io/Website" target="_blank"
                                     class="github"><img src="icons/arrow-up-right-from-square-solid.svg"></a>
                             </div>
                         </div>
@@ -146,7 +157,7 @@
                             <div class="icons">
                                 <a href="https://github.com/shalinird1999/personal-blog" target="_blank"
                                     class="github"><img src="icons/github.svg"></a>
-                                <a href="https://justdecodeme.github.io/portfolio/connect/" target="_blank"
+                                <a href="https://shalinird1999.github.io/Personal-blog" target="_blank"
                                     class="github"><img src="icons/arrow-up-right-from-square-solid.svg"></a>
                             </div>
                         </div>
