--- a/about.html
+++ b/about.html
@@ -1,40 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Shalini - Portfolio</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shalini - Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
-    <body>
-        <header>
-            <div class="wrapper">
-                <a class="logo" href="index.html">SR</a>
-                <nav>
-                    <a href="./index.html">Projects</a>
-                    <a href="./about.html" class="active">About</a>
-                    <a href="./shalini-resume.pdf" target="_blank">Resume</a>
-                </nav>
-            </div>
-        </header>
-        <main>
+<body>
+    <header>
+        <div class="wrapper">
+            <a class="logo" href="index.html">SR</a>
+            <nav>
+                <a href="./index.html">Projects</a>
+                <a href="./about.html" class="active">About</a>
+                <a href="./shalini-resume.pdf" target="_blank">Resume</a>
+            </nav>
+        </div>
+    </header>
+    <main>
 
-            <div class="projects">
-                <div class="wrapper">
-                    <h1>About Me</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta numquam corporis pariatur
-                        perferendis eveniet in officiis ducimus tempora nemo? Porro ratione eos explicabo molestiae.
-                        Harum suscipit aliquam molestiae cupiditate voluptatibus.</p>
-                </div>
-            </div>
-        </main>
-        <footer>
+        <div class="projects">
             <div class="wrapper">
-                <p>Made with 💖 & 🍵 in Bangalore - 2024</p>
+                <h1>About Me</h1>
+                <p>Detail-oriented professional transitioning from a successful career in accounting and sales to web
+                    development. Leveraging two years of accounting experience with strong analytical skills and a keen
+                    eye for accuracy, combined with a solid foundation in web development. Passionate about creating
+                    efficient, responsive websites that drive user engagement and support business objectives, with a
+                    focus on integrating financial acumen and technical expertise.</p>
             </div>
-        </footer>
-    </body>
+        </div>
+    </main>
+    <footer>
+        <div class="wrapper">
+            <p>Made with 💖 & 🍵 in Bangalore - 2024</p>
+        </div>
+    </footer>
+</body>
 
 </html>
